--- a/hindialam.css
+++ b/hindialam.css
@@ -73,7 +73,7 @@ button {
   display: block;
   width: 30%;
   padding: 10px;
-  background: #007bff;
+  background: #799567;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -82,5 +82,5 @@ button {
 }
 
 button:hover {
-  background: #0056b3;
+  background: #35522b;
 }
